--- a/style.css
+++ b/style.css
@@ -356,3 +356,46 @@ nav {
     font-size: 17px;
     animation: todopop alternate-reverse 1;
 }
+
+
+.progresscont {
+
+    background-color:white;
+    width: 60%;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;    
+    height: 20px;
+    border-radius:20px ;
+    /* display: none; */
+    
+    
+}
+
+
+
+.progress {
+    background-color:rgb(29, 169, 29);
+    width: 0%;
+    border-radius:  10px;
+    height: 100%; 
+     
+}
+
+.conftodo input{
+
+    /* display: inline-block; */
+height: 25px;
+border: 20px;
+
+    
+    
+}
+
+#percentage {
+
+
+    font-size: 20px;
+    font-weight: bolder;
+}
