--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
     /* transition: .2 ease-in; */
 
+}
+
+::selection{
+    background-color: black;
 }
 
 ::-webkit-scrollbar {
